feat: improved support for large maps